--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "1.1.1",
+    "@astrojs/partytown": "^2.0.1",
     "@astrojs/rss": "3.0.0",
     "@astrojs/sitemap": "3.0.1",
     "@astrojs/tailwind": "5.0.1",
