:sparkles: [FEAT]: Add new logo and optimize favicons

--- a/src/config/configES.json
+++ b/src/config/configES.json
@@ -4,7 +4,7 @@
     "base_url": "https://blog.ingcapadev.com",
     "base_path": "/es",
     "favicon": "/favicon.png",
-    "logo": "https://s3.amazonaws.com/gndx.dev/ev0-astro-logo.png",
+    "logo": "/logo_ingcapadev.webp",
     "lang": "es",
     "description": "My blog personal",
     "pageSize": 6
