:pencil2: [FIX]: Remote rights legend in footer

--- a/src/config/configES.json
+++ b/src/config/configES.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "INGCapaDev",
+    "title": "INGCapaDev Blog",
     "base_url": "https://blog.ingcapadev.com",
     "base_path": "/es",
     "favicon": "/favicon.png",
