--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "INGCapaDev",
+    "title": "INGCapaDev Blog",
     "base_url": "https://blog.ingcapadev.com",
     "base_path": "/",
     "favicon": "/favicon.png",
