feat: change my profile picture to new one

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -19,7 +19,7 @@
   },
   "author": {
     "name": "Alvaro Capaceta Magallanes",
-    "avatar": "/me.jpg",
+    "avatar": "/me-pb.webp",
     "bio": "Welcome to my personal blog where I share my experiences and knowledge about web development, productivity and other interesting topics."
   }
 }
