--- a/src/config/configES.json
+++ b/src/config/configES.json
@@ -19,7 +19,7 @@
   },
   "author": {
     "name": "Alvaro Capaceta Magallanes",
-    "avatar": "/me.jpg",
+    "avatar": "/me-pb.webp",
     "bio": "Bienvenido a mi blog personal donde comparto mis experiencias y conocimientos sobre desarrollo web, productividad y otros temas interesantes."
   }
 }
